force-app/src/objects/ffbf__PaymentMediaControlTest__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankAccountNumber__c</fullName>
        <label>Originator Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CreditTotal__c</fullName>
        <formula>IF( TEXT(ffbf__PaymentType__c) = &quot;Payments&quot; ,  ffbf__PaymentValue__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DebitTotal__c</fullName>
        <formula>IF ( TEXT(ffbf__PaymentType__c) = &quot;Collections&quot;,  ffbf__PaymentValue__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationBankAccountNumberSum__c</fullName>
        <label>Destination Bank Account Number Sum</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationBankAccountTextSum__c</fullName>
        <label>Destination Bank Account Text Sum</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationSortCodeNumberSum2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Destination Sort Code Number Sum 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__DestinationSortCodeNumberSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Destination Sort Code Number Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotal2__c</fullName>
        <formula>CASE ( LEN ( TEXT (ffbf__DestinationSortCodeNumberSum__c) ), 
		1, &quot;000000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,1),
		2, &quot;00000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,2),
		3, &quot;0000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,3),
		4, &quot;000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,4),
		5, &quot;00000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,5),
		6, &quot;0000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,6),
		7, &quot;000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,7),
		8, &quot;00&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,8),
		9, &quot;0&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum__c ),1,9), 
		RIGHT (TEXT(ffbf__DestinationSortCodeNumberSum__c), 10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotal3__c</fullName>
        <formula>CASE ( LEN ( TEXT (ffbf__DestinationSortCodeNumberSum2__c) ),
            1, &quot;000000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,1),
            2, &quot;00000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,2),
            3, &quot;0000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,3),
            4, &quot;000000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,4),
            5, &quot;00000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,5),
            6, &quot;0000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,6),
            7, &quot;000&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,7),
            8, &quot;00&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,8),
            9, &quot;0&quot; &amp;  MID (TEXT( ffbf__DestinationSortCodeNumberSum2__c ),1,9),
            RIGHT (TEXT(ffbf__DestinationSortCodeNumberSum2__c), 10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotalText__c</fullName>
        <formula>CASE ( LEN ( (ffbf__DestinationBankAccountTextSum__c) ), 
1, &quot;00000000000&quot;, 
2, &quot;00000000000&quot;, 
3, &quot;00000000000&quot;, 
4, &quot;00000000000&quot;, 
5, &quot;0000000000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,1), 
6, &quot;000000000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,2), 
7, &quot;00000000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,3), 
8, &quot;0000000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,4), 
9, &quot;000000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,5), 
10, &quot;00000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,6), 
11, &quot;0000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,7), 
12, &quot;000&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,8), 
13, &quot;00&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,9), 
14, &quot;0&quot; &amp; MID (( ffbf__DestinationBankAccountTextSum__c ),1,10), 
15, MID (( ffbf__DestinationBankAccountTextSum__c ),1,11), 
MID (( ffbf__DestinationBankAccountTextSum__c) , 2, 11) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__HashTotal__c</fullName>
        <formula>CASE ( LEN ( TEXT (ffbf__DestinationBankAccountNumberSum__c) ),
1, &quot;00000000000&quot;,
2, &quot;00000000000&quot;,
3, &quot;00000000000&quot;,
4, &quot;00000000000&quot;,
5, &quot;0000000000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,1),
6, &quot;000000000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,2),
7, &quot;00000000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,3),
8, &quot;0000000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,4),
9, &quot;000000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,5),
10, &quot;00000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,6),
11, &quot;0000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,7),
12, &quot;000&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,8),
13, &quot;00&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,9),
14, &quot;0&quot; &amp; MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,10),
15, MID (TEXT( ffbf__DestinationBankAccountNumberSum__c ),1,11),
MID ( TEXT( ffbf__DestinationBankAccountNumberSum__c) , 2, 11) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>ffbf__PaymentTest__c</referenceTo>
        <relationshipName>BankFormatPaymentMediaControlTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordCounts__c</fullName>
        <label>Record Counts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Media Control Test</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Media Control Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>